--- a/submodule/MyModuleAndroid/src/main/AndroidManifest.xml
+++ b/submodule/MyModuleAndroid/src/main/AndroidManifest.xml
@@ -1,7 +1,1 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="com.measuredsoftware.mymodule.lib">
-
-    <application android:allowBackup="true" android:label="@string/app_name">
-
-    </application>
-
-</manifest>
+<manifest package="com.measuredsoftware.mymodule"/>
